Trying to figure out bug when setting img height to percentage creates peculiar white space that stretches to the parent div width

--- a/src/features/gallery/components/GalleryContainer.module.css
+++ b/src/features/gallery/components/GalleryContainer.module.css
@@ -7,6 +7,7 @@
 
 .mainImage {
   grid-area: 1 / 2 / 2 / 3;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,19 +20,24 @@
   object-fit: contain;
 }
 
-.galleryContainer {
+.carouselWrapper {
   grid-area: 2 / 1 / 3 / -1;
-  width: 100%;
-  padding: 1rem;
-  white-space: nowrap;
-  overflow-x: hidden;
   display: flex;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.galleryContainer {
+  height: 100%;
+  padding: 1rem;
+  display: flex;
+  overflow: hidden;
   gap: 1rem;
 }
 
 .galleryContainer > img {
-  height: 100px;
-  aspect-ratio: 1/1;
+  width: 150px;
+  height: 150px;
   object-fit: cover;
   cursor: pointer;
 }
